sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value i
while ( echange ( i , i+1 ) == true) {
                  ^